--- a/views/formulario.html
+++ b/views/formulario.html
@@ -29,7 +29,7 @@
         <h2>{{title}}</h2>
 
         {{^edit}}
-        <form role="form" action="/formulario/inscribir" method="post">
+        <form role="form" action="/formulario/inscribir" id="formulario" method="post">
         {{/edit}}
 
         {{#edit}}
@@ -37,20 +37,22 @@
             <input type="hidden" name="id" value="{{player.id}}">
         {{/edit}}
 
-            <div class="form-group">
+           <div class="form-group" id="grupo__name">
                 <label for="name">Nombre del jugador</label>
-                <input type="text" class="form-control" name="name" placeholder="Nombre y apellidos" value="{{player.name}}" required>
-                <div id="grupo__name" class="formulario__grupo">
-                    <p class="formulario__input-error">El nombre debe empezar por mayúscula.</p>
+                <div class="form-group-input">
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Nombre y apellidos" value="{{player.name}}">
+                    <i class="form-validate-state fas fa-times-circle"></i>
                 </div>
+                <p class="form-control-error">El nombre debe empezar por mayúscula.</p>
             </div>
 
-            <div class="form-group">
+            <div class="form-group" id="grupo__description">
                 <label for="description">Descripción</label>
-                <textarea type="text" class="form-control" name="description" placeholder="Detalles del jugador" required>{{player.description}}</textarea>
-                <div id="grupo__description" class="formulario__grupo">
-                    <p class="formulario__input-error">La descripción debe tener entre 50 y 500 caracteres.</p>
+                <div class="form-group-input">
+                    <input type="text" class="form-control" name="description" id="description" placeholder="Detalles del jugador" value="{{player.description}}">
+                    <i class="form-validate-state fas fa-times-circle"></i>
                 </div>
+                <p class="form-control-error">La descripción debe tener entre 50 y 500 caracteres.</p>
             </div>
 
             <div class="row">
@@ -69,38 +71,44 @@
                         <option value="Portero">Portero</option>
                     </select>
                 </div>
-                <div class="form-group col-md-6 col-sm-12">
+                <div class="form-group col-md-6 col-sm-12" id="grupo__number">
                     <label for="jersey-number">Dorsal</label>
-                    <input type="number" class="form-control" name="number" placeholder="0" value="{{player.number}}" required min="0" max="99">
-                    <div id="grupo__number" class="formulario__grupo">
-                        <p class="formulario__input-error">El dorsal debe ser un número entre 0 y 99.</p>
+                    <div class="form-group-input">
+                        <input type="number" class="form-control" name="number" id="number" placeholder="0" value="{{player.number}}">
+                        <i class="form-validate-state fas fa-times-circle"></i>
                     </div>
+                    <p class="form-control-error">El dorsal debe estar entre 0 y 99.</p>
                 </div>
             </div>
 
             <div class="form-group row">
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12" id="grupo__birthday">
                     <label for="birthday">Fecha de nacimiento</label>
-                    <input type="date" class="form-control text-uppercase" name="birthday" value="{{player.birth}}" required>
-                    <div id="grupo__birthday" class="formulario__grupo">
-                        <p class="formulario__input-error">La fecha de nacimiento debe tener el formato correcto.</p>
+                    <div class="form-group-input">
+                        <input type="date" class="form-control text-uppercase" name="birthday" id="birthday" value="{{player.birth}}">
+                        <i class="form-validate-state fas fa-times-circle"></i>
                     </div>
+                    <p class="form-control-error">La fecha debe ser válida.</p>
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <label for="nationality">Nacionalidad</label>
-                    <input type="text" class="form-control" name="nationality" placeholder="Ej.: Española" value="{{player.nationality}}" required>
-                    <div id="grupo__nationality" class="formulario__grupo">
-                        <p class="formulario__input-error">La nacionalidad debe empezar por mayúscula.</p>
+                    <div class="form-group" id="grupo__nationality">
+                        <label for="nationality">Nacionalidad</label>
+                        <div class="form-group-input">
+                            <input type="text" class="form-control" name="nationality" id="nationality" placeholder="Ej.: Española" value="{{player.nationality}}">
+                            <i class="form-validate-state fas fa-times-circle"></i>
+                        </div>
+                        <p class="form-control-error">La nacionalidad debe empezar por mayúscula.</p>
                     </div>
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group" id="grupo__photo">
                 <label for="player-photo">Foto de perfil</label>
-                <input type="url" class="form-control" name="photo" placeholder="URL de la imagen" value="{{player.photo}}" required>
-                <div id="grupo__photo" class="formulario__grupo">
-                    <p class="formulario__input-error">Debe introducir una URL válida.</p>
+                <div class="form-group-input" >
+                    <input type="url" class="form-control" name="photo" id="photo" placeholder="URL de la imagen" value="{{player.photo}}">
+                    <i class="form-validate-state fas fa-times-circle"></i>
                 </div>
+                <p class="form-control-error">Debe introducir una URL válida.</p>
             </div>
 
             <div class="form-group">
@@ -108,9 +116,6 @@
                 {{#player}}
                 <input type="range" class="form-range" name="price" value="{{player.marketValue}}" min="0" max="100000000" step="10000" oninput="this.nextElementSibling.value = this.value">
                 <output for="price" id="outrange">{{player.marketValue}}</output>€
-                <div id="grupo__price" class="formulario__grupo">
-                    <p class="formulario__input-error">El valor de mercado debe estar entre 0 y 100,000,000.</p>
-                </div>
                 {{/player}}
                 {{^player}}
                 <input type="range" class="form-range" name="price" value="0" min="0" max="100000000" step="10000" oninput="this.nextElementSibling.value = this.value">
@@ -118,8 +123,12 @@
                 {{/player}}
             </div>
 
+            <div class="form-error-message" id="form-error-message">
+                <p><i class="bi bi-exclamation-triangle-fill"></i> <b>Error:</b> Por favor rellene el formulario correctamente.</p>
+            </div>
+
             <div class="btn-cont">
-                <button type="submit" onclick="submitFormulario(event)" class="btn"><i class="bi bi-download"></i> Guardar</button>
+                <button type="submit" class="btn" id="formulario__btn"><i class="bi bi-download"></i> Guardar</button>
                 <a href="javascript:history.back()" class="btn" role="button"><i class="bi bi-x-lg"></i> Cancelar</a>
             </div>
         </form>
