--- a/views/formulario.html
+++ b/views/formulario.html
@@ -105,7 +105,7 @@
             <div class="form-group" id="grupo__photo">
                 <label for="player-photo">Foto de perfil</label>
                 <div class="form-group-input" >
-                    <input type="url" class="form-control" name="photo" id="photo" placeholder="URL de la imagen" value="{{player.photo}}">
+                    <input type="text" class="form-control" name="photo" id="photo" placeholder="URL de la imagen" value="{{player.photo}}">
                     <i class="form-validate-state fas fa-times-circle"></i>
                 </div>
                 <p class="form-control-error">Debe introducir una URL válida.</p>
